force-app/main/default/objects/GWB_HQ_Target__c/GWB_HQ_Target__c.object-meta.xml
<CustomObject>
    <label>HQ Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HQ Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>