force-app/main/default/objects/GWB_HQ_Target__c/fields/Approved_FTE_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Approved_FTE_Coverage__c</fullName>
    <label>Approved FTE Coverage</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
    <defaultValue>0</defaultValue>
</CustomField>