force-app/main/default/objects/GWB_HQ_Target__c/fields/Gap_To_Target__c.field-meta.xml
<CustomField>
    <fullName>Gap_To_Target__c</fullName>
    <label>Gap To Target</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>