force-app/main/default/objects/GWB_HQ_Target__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Lookup</type>
    <referenceTo>GWB_Plant__c</referenceTo>
    <relationshipName>HQ_Targets</relationshipName>
    <relationshipLabel>HQ Targets</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>