force-app/main/default/objects/GWB_HQ_Target__c/fields/Plant_Shop__c.field-meta.xml
<CustomField>
    <fullName>Plant_Shop__c</fullName>
    <label>Plant Shop</label>
    <type>Lookup</type>
    <referenceTo>GWB_Plant_Shop__c</referenceTo>
    <relationshipName>Shop_HQ_Targets</relationshipName>
    <relationshipLabel>HQ Targets</relationshipLabel>
</CustomField>