force-app/main/default/objects/GWB_HQ_Target__c/fields/Production_Context__c.field-meta.xml
<CustomField>
    <fullName>Production_Context__c</fullName>
    <label>Production Context</label>
    <type>TextArea</type>
</CustomField>