force-app/main/default/objects/GWB_HQ_Target__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Q1 2026</fullName><label>Q1 2026</label><default>false</default></value>
            <value><fullName>Q2 2026</fullName><label>Q2 2026</label><default>false</default></value>
            <value><fullName>Q3 2026</fullName><label>Q3 2026</label><default>false</default></value>
            <value><fullName>Q4 2026</fullName><label>Q4 2026</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>