force-app/main/default/objects/GWB_HQ_Target__c/fields/Target_FTE__c.field-meta.xml
<CustomField>
    <fullName>Target_FTE__c</fullName>
    <label>Target FTE Reduction</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>1</scale>
    <required>true</required>
</CustomField>