force-app/main/default/objects/GWB_HQ_Target__c/listViews/All_HQ_Targets.listView-meta.xml
<ListView>
    <fullName>All_HQ_Targets</fullName>
    <label>All HQ Targets</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Shop__c</columns>
    <columns>Quarter__c</columns>
    <columns>Target_FTE__c</columns>
    <columns>Approved_FTE_Coverage__c</columns>
    <columns>Gap_To_Target__c</columns>
    <sharedTo><allInternalUsers/></sharedTo>
</ListView>